Ajustes modulo nuevo producto con punto de entrega

--- a/Fuentes Core Desarrollo/CorParques.Presentacion.MVC/CorParques.Presentacion.MVC.csproj
+++ b/Fuentes Core Desarrollo/CorParques.Presentacion.MVC/CorParques.Presentacion.MVC.csproj
@@ -287,6 +287,7 @@
     <Content Include="Scripts\DescargueMasivoBoleta.js" />
     <Content Include="Scripts\FacturacionExterno.js" />
     <Content Include="Scripts\Facturacion.js" />
+    <Content Include="Scripts\ProductoPtoEntrega.js" />
     <Content Include="Scripts\Reagendamiento.js" />
     <Content Include="Scripts\LoginExterno.js" />
     <Content Include="Scripts\Login.js" />
@@ -963,6 +964,9 @@
     <Content Include="Views\Reagendamiento\_CheckFactura.cshtml" />
     <Content Include="Views\ReporteVentasPorConveni\Index.cshtml" />
     <Content Include="Views\ReporteVentasPorConveni\_List.cshtml" />
+    <Content Include="Views\Productos\PuntosEntrega.cshtml" />
+    <Content Include="Views\Productos\_ListPuntosEntrega.cshtml" />
+    <Content Include="Views\Productos\_EditPuntosEntrega.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CorParques.Negocio.Contratos\CorParques.Negocio.Contratos.csproj">
