--- a/CorParques.Presentacion.MVC.Core/Web.config
+++ b/CorParques.Presentacion.MVC.Core/Web.config
@@ -15,8 +15,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--<add key="UrlService" value="http://172.16.1.66/APIPREPROD/api/" />-->
-    <!--<add key="UrlService" value="http://172.16.1.47/WebApiQA/api/" />-->
-    <add key="UrlService" value="http://localhost:50668/api/" />
+    <add key="UrlService" value="http://172.16.1.47/WebApiQA/api/" />
+    <!--<add key="UrlService" value="http://localhost:50668/api/" />-->
     <!--<add key="UrlService" value="http://172.16.1.47/WebApiQA/api/" />-->
     <add key="UrlServiceLocal" value="http://localhost:50668/api/" />
     <add key="RutaImagenes" value="http://172.16.1.17/adminDEV/images"></add>
