--- a/CorParques.Presentacion.MVC.Redencion.Core/Web.config
+++ b/CorParques.Presentacion.MVC.Redencion.Core/Web.config
@@ -14,36 +14,20 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <!--<add key="UrlService" value="http://172.16.1.66/APIPREPROD//api/" />-->
-    <!--<add key="UrlService" value="http://172.16.1.66/webapi//api/" />-->
-    <!--<add key="UrlService" value="http://172.16.1.47/WebApiQa/api/" />-->
-    <!--<add key="UrlService" value="http://172.16.1.66/webapi/api/" />-->
-    <add key="UrlService" value="http://localhost:50668/api/" />
+    <!--<add key="UrlService" value="http://172.16.1.66/APIPREPROD/api/" />-->
+    <add key="UrlService" value="http://172.16.1.47/WebApiQa/api/" />
+    <!--<add key="UrlService" value="http://localhost:50668/api/" />-->
     <add key="UrlServiceLocal" value="http://localhost:50668/api/" />
     <add key="RutaImagenes" value="http://172.16.1.17/adminDEV/images"></add>
     <add key="RutaArchivos" value="http://172.16.1.66/Admin/Archivos/Brazaletes/" />
     <!--<add key="RutaArchivos" value="http://172.16.1.66/AdminQA/Archivos/Brazaletes/" /> -->
     <add key="llaveEncripcion" value="C0RP4RQU3550F773k" />
     <add key="pwdGeneric" value="C0RP4RQU35" />
-    <!--<add key="IdPunto" value="PC_0001" />-->
-    <!--<add key="IdPunto" value="PC_0021" />-->
-    <!--<add key="IdPunto" value="TA_0012" />-->
     <add key="IdPunto" value="TA_0017" />
-    <!--<add key="IdPunto" value="40000440" />-->
-    <!--<add key="IdPunto" value="TA_0016" />-->
-    <!--<add key="IdPunto" value="TA_0013" />-->
-    <!--<add key="IdPunto" value="ZC_0002" />-->
-
     <add key="puertoSerial" value="COM1" />
     <add key="RutaLogoImprimir" value="CorParques.Presentacion.MVC.Redencion.Core\Images\logo_ma_color.jpg" />
-    <!--<add key="NombreImpresora" value="EPSON TM-T88V USB" />-->
-    <!--<add key="NombreImpresora" value="EPSON TM-T88V USB" />-->
-    <!--<add key="NombreImpresora" value="ZDesigner ZQ510 (CPCL)" />-->
     <add key="NombreImpresora" value="OneNote (Desktop)" />
-    <!--<add key="ImpresoraBrazalete" value="ZDesigner ZD410-203dpi ZPL (Copiar 1)"/>-->
     <add key="ImpresoraBrazalete" value="ZDesigner ZD410-203dpi ZPL" />
-    <!--<add key="ImpresoraBrazalete" value="Boca BIDI FGL 26/46 300 DPI"/>-->
-    <!--<add key="ImpresoraBrazalete" value="ZDesigner ZD410-203dpi ZPL (1)"/>-->
     <add key="TagCodigoBarras" value="1234567890128" />
     <add key="RutaLogError" value="C:\LogError\" />
     <add key="IntentosConsumoServicio" value="1" />
