--- a/CorParques.Servicios.WebApi/Web.config
+++ b/CorParques.Servicios.WebApi/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <appSettings>
     <add key="CnnAmbiente" value="QA" />
-    <!--<add key="CnnAmbiente" value="QA" />-->
+    <!--<add key="CnnAmbiente" value="PRD" />-->
     <add key="Cnn" value="CorParques" />
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
