Correccion Api redenciones -Kioskos

--- a/CorParques.Presentacion.MVC.Redencion.Core/Web.config
+++ b/CorParques.Presentacion.MVC.Redencion.Core/Web.config
@@ -15,15 +15,16 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--<add key="UrlService" value="http://172.16.1.66/APIPREPROD/api/" />-->
-    <add key="UrlService" value="http://172.16.1.47/WebApiQa/api/" />
-    <!--<add key="UrlService" value="http://localhost:50668/api/" />-->
+    <!--<add key="UrlService" value="http://172.16.1.47/WebApiQa/api/" />-->
+    <!--<add key="UrlService" value="http://172.16.1.66/ApiPruebasQA/api/" />-->
+    <add key="UrlService" value="http://localhost:50668/api/" />
     <add key="UrlServiceLocal" value="http://localhost:50668/api/" />
     <add key="RutaImagenes" value="http://172.16.1.17/adminDEV/images"></add>
     <add key="RutaArchivos" value="http://172.16.1.66/Admin/Archivos/Brazaletes/" />
     <!--<add key="RutaArchivos" value="http://172.16.1.66/AdminQA/Archivos/Brazaletes/" /> -->
     <add key="llaveEncripcion" value="C0RP4RQU3550F773k" />
     <add key="pwdGeneric" value="C0RP4RQU35" />
-    <add key="IdPunto" value="TA_0017" />
+    <!--<add key="IdPunto" value="TA_0017" />-->
     <add key="puertoSerial" value="COM1" />
     <add key="RutaLogoImprimir" value="CorParques.Presentacion.MVC.Redencion.Core\Images\logo_ma_color.jpg" />
     <add key="NombreImpresora" value="OneNote (Desktop)" />
